Most provided copy and assets in, stylings via bourbon/neat

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,9 @@
 ---
-title: Welcome to Middleman
+title: Birmingham Barcamp
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<%= partial "partials/index/header" %>
+<%= partial "partials/index/informative" %>
+<%= partial "partials/index/schedule" %>
+<%= partial "partials/index/about" %>
+<%= partial "partials/index/sponsors" %>
