--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,11 @@
   </head>
   
   <body class="<%= page_classes %>">
-    <%= yield %>
+    <div id="main" role="main">
+      <%= yield %>
+      <%= partial "partials/footer" %>    
+    </div>
+    <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js" %>
+    <%= javascript_include_tag "map" %>
   </body>
 </html>
