reworked the organization of the scss and some of the markup

--- a/source/partials/index/_header.erb
+++ b/source/partials/index/_header.erb
@@ -1,4 +1,4 @@
-<section>
+<header>
   <div class="hero">
     <div class="hero-inner">
       <%= image_tag 'logo.png', class: "hero-logo" %>
@@ -12,4 +12,4 @@
       <button>Event Registration</button>
     </div>
   </div>
-</section>
+</header>
