--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -22,3 +22,10 @@
 @import "tables";
 @import "lists";
 @import "buttons";
+
+
+@import "components/layout";
+@import "components/map";
+@import "components/sponsors";
+@import "components/header";
+@import "components/footer";
