--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -15,6 +15,7 @@
   
   <body class="<%= page_classes %>">
     <div id="main" role="main">
+      <%= partial "partials/header" %>
       <%= yield %>
       <%= partial "partials/footer" %>    
     </div>
