--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
 @import "bourbon";
+@import "base/grid-settings";
 @import "neat";
-@import "base/base";   /* Bitters needs to be imported before Neat */
+@import "base/base"; 
