--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -1,6 +1,13 @@
 @charset "utf-8";
 
 @import "bourbon";
-@import "base/grid-settings";
-@import "neat";
 @import "base/base"; 
+@import "neat";
+
+// Components and Partial Groups 
+@import "components/layout";
+@import "components/index";
+@import "components/map";
+@import "components/sponsors";
+@import "components/header";
+@import "components/footer";
