completed the basic mobile design

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,6 +1,6 @@
 <footer class="footer" role="contentinfo">
   <div class="footer-logo">
-    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="Logo image">
+    <img src="/images/footer_logo.svg" alt="Logo image">
   </div>
     <ul>
       <li><a href="javascript:void(0)">About</a></li>
@@ -15,10 +15,10 @@
       </ul>
 
       <ul class="footer-social">
-        <li><a href="javascript:void(0)">
+        <li><a href="https://www.facebook.com/barcampbirmingham">
           <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
           </a></li>
-        <li><a href="javascript:void(0)">
+        <li><a href="https://twitter.com/barcampbham">
           <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
         </a></li>
         <li><a href="javascript:void(0)">
