--- a/source/partials/index/_informative.erb
+++ b/source/partials/index/_informative.erb
@@ -1,12 +1,12 @@
 <section>
   <div class="video-container">
-    <h1>Video</h1>
+    <h2>Video</h2>
     <div class='responsive-wrapper'>
-      <iframe class='youtube-video' width="100%" height="100%" src="//www.youtube.com/embed/n6-BVIPL6a4&controls=0&showinfo=0&rel=0&html5=1" frameborder="0" allowfullscreen></iframe>
+      <iframe class='youtube-video' width="100%" height="100%" src="//www.youtube.com/embed/n6-BVIPL6a4" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
   <div class="map-container">
-    <h1>Map</h1>
+    <h2>Map</h2>
     <div id="map"></div>
   </div>
 </section>
