--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -25,10 +25,12 @@ h1 {
 
 h2 {
   font-size: $h2-font-size;
+  font-weight: lighter;
 }
 
 h3 {
   font-size: $h3-font-size;
+  font-weight: lighter;
 }
 
 h4 {
