fixed a nav and added sponsor pages and about page

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -3,26 +3,26 @@
     <img src="/images/footer_logo.svg" alt="Logo image">
   </div>
     <ul>
-      <li><a href="javascript:void(0)">About</a></li>
-      <li><a href="javascript:void(0)">Contact</a></li>
-      <li><a href="javascript:void(0)">Products</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Contact</a></li>
+      <li><a href="">Products</a></li>
     </ul>
 
     <div class="footer-secondary-links">
       <ul>
-        <li><a href="javascript:void(0)">Terms and Conditions</a></li>
-        <li><a href="javascript:void(0)">Privacy Policy</a></li>
+        <li><a href="/">Terms and Conditions</a></li>
+        <li><a href="/">Privacy Policy</a></li>
       </ul>
 
       <ul class="footer-social">
         <li><a href="https://www.facebook.com/barcampbirmingham">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="Facebook">
+          <img src="/images/facebook-logo-circle.png" alt="Facebook">
           </a></li>
         <li><a href="https://twitter.com/barcampbham">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="Twitter">
+          <img src="/images/twitter-logo-circle.png" alt="Twitter">
         </a></li>
-        <li><a href="javascript:void(0)">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="YouTube">
+        <li><a href="/">
+          <img src="/images/youtube-logo-circle.png" alt="YouTube">
         </a></li>
       </ul>
     </div>
