--- a/source/partials/index/_informative.erb
+++ b/source/partials/index/_informative.erb
@@ -1,4 +1,12 @@
 <section>
+  <div class="next-date">
+    <h2>Saturday, April 18</h2>
+    <h3>9:00am-6:00pm</h3>
+    <p>Join BarCamp Birmingham for another year of knowledge sharing and cooperative learning.</p>
+    <button>Event Registration</button>
+  </div>
+</section>
+<section>
   <div class="video-container">
     <h2>Video</h2>
     <div class='responsive-wrapper'>
