--- a/source/partials/_header.erb
+++ b/source/partials/_header.erb
@@ -1,11 +1,26 @@
 <header>
-  <h1>
-    <span>barcamp | birmingham</span>
-  </h1>
-  <div class="next-date">
-    <h2>Saturday, April 18</h2>
-    <h3>9:00am-6:00pm</h3>
-    <p>Join BarCamp Birmingham for another year of knowledge sharing and cooperative learning.</p>
-    <button>Event Registration</button>
-  </div>
+  <a href='/'>
+    <h1>
+      <span>barcamp | birmingham</span>
+    </h1>
+  </a>
+  <nav>
+    <ul>
+      <li>
+        <a href='/about'>
+          About
+        </a>
+      </li>
+      <li>
+        <a href='/sponsorship'>
+          Sponsorship
+        </a>
+      </li>
+      <li>
+        <a href='/contact'>
+          Contact
+        </a>
+      </li>
+    </ul>
+  </nav>
 </header>
