--- a/source/stylesheets/components/_header.scss
+++ b/source/stylesheets/components/_header.scss
@@ -12,28 +12,21 @@ header{
       display: none;
     }
   }
-  .next-date{
-    @include span-columns(12);
-    margin-top: 1em;
+  nav{
     text-align: center;
+    @include span-columns(12);  
     @include media($large-screen-up) {
       text-align: left;
-      @include span-columns(6);  
-      @include omega;  
+      @include span-columns(6);
+      margin-top: 5.5em;
     }
-    h2{
-      font-size: 2em;
+    ul{
+       li{
+         display: inline-block;
+         a{
+           padding: .5em 1em;
+         }
+       }
     }
-    h3{
-      font-size: 1.25em;
-    }
-    p{
-      padding: 1em 0;
-    }
-  }
-  button{
-    padding: 1em;
-    border-radius: 20px;
-    text-align: center;
   }
 }
