--- a/source/stylesheets/components/_layout.scss
+++ b/source/stylesheets/components/_layout.scss
@@ -10,3 +10,13 @@
     }
   }
 }
+h2{
+  border-bottom: 1px solid lighten($base-font-color, 70%);
+  margin-top: .5em;
+  margin-bottom: .25em;
+  padding-bottom: .25em;
+  @include media($large-screen-up) {
+    margin-top: 1em;
+    margin-bottom: .5em;
+  }
+}
