finished up the styling

--- a/source/stylesheets/components/_header.scss
+++ b/source/stylesheets/components/_header.scss
@@ -16,7 +16,7 @@ header{
     text-align: center;
     @include span-columns(12);  
     @include media($large-screen-up) {
-      text-align: left;
+      text-align: right;
       @include span-columns(6);
       margin-top: 5.5em;
     }
