--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,4 +1,11 @@
 
+$footer-background: desaturate(darken($base-accent-color, 20%), 30%);
+$footer-color: white;
+$footer-link-color: transparentize($footer-color, 0.6);
+$footer-disclaimer-color: transparentize($footer-color, 0.6);
+body{
+  background-color: $footer-background;
+}
 .footer {
   
 ///////////////////////////////////////////////////////////////////////////////////
@@ -23,10 +30,6 @@
   
 //////////////////////////////////////////////////////////////////////////////////
 
-  $footer-background: desaturate(darken($base-accent-color, 20%), 30%);
-  $footer-color: white;
-  $footer-link-color: transparentize($footer-color, 0.6);
-  $footer-disclaimer-color: transparentize($footer-color, 0.6);
 
   background: $footer-background;
   padding: $base-spacing;
