--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -3,15 +3,19 @@
     <img src="/images/footer_logo.svg" alt="Logo image">
   </div>
     <ul>
-      <li><a href="">About</a></li>
-      <li><a href="">Contact</a></li>
-      <li><a href="">Products</a></li>
+      <li><a href="/about">About</a></li>
+      <li><a href="/contact">Contact</a></li>
+      <li>
+        <a href='/sponsorship'>
+          Sponsorship
+        </a>
+      </li>
     </ul>
 
     <div class="footer-secondary-links">
       <ul>
-        <li><a href="/">Terms and Conditions</a></li>
-        <li><a href="/">Privacy Policy</a></li>
+        <li><a href="/"></a></li>
+        <li><a href="/"></a></li>
       </ul>
 
       <ul class="footer-social">
