--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -4,12 +4,8 @@
   </div>
     <ul>
       <li><a href="/about">About</a></li>
+      <li><a href='/sponsorship'>Sponsorship</a></li>
       <li><a href="/contact">Contact</a></li>
-      <li>
-        <a href='/sponsorship'>
-          Sponsorship
-        </a>
-      </li>
     </ul>
 
     <div class="footer-secondary-links">
