--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Birmingham Barcamp
+title: Birmingham Barcamp | Home  
 ---
 <%= partial "partials/index/informative" %>
 <%= partial "partials/index/schedule" %>
